FIX - promo panel - title position tablet/mobile.

--- a/src/assets/toolkit/styles/6-components/_components.promo-panel.scss
+++ b/src/assets/toolkit/styles/6-components/_components.promo-panel.scss
@@ -517,7 +517,7 @@ $promo-max-width:   60em;
                 width: 80%;
                 padding: 1em;
                 left: 0;
-                top: 2em;
+                bottom: 2em;
 
                 h1,
                 h2,
@@ -544,14 +544,16 @@ $promo-max-width:   60em;
             figure {
 
                 img {
-                    position: absolute;
-                    bottom: 5%;
+                    // position: absolute;
+                    // bottom: 5%;
+                    padding-left: 1em;
                 }
 
                 figcaption {
-                    // bottom: 1em;
+                    bottom: 6%;
                     // top: unset;
-                    width: 90%;
+                    width: 94%;
+                    position: relative;
                 }
             }   
         }
@@ -569,7 +571,8 @@ $promo-max-width:   60em;
                     }
 
                     figcaption {
-                        position: initial;
+                        position: relative;
+                        bottom: 0;
                         width: 100%;
 
                         h2 {
